--- a/contact.html
+++ b/contact.html
@@ -129,6 +129,9 @@
               <a href="https://github.com/michaelchang106" target="_blank"
                 ><img class="icons" src="./images/github.png" alt="Github icon"
               /></a>
+              <a href="https://twitter.com/Michael14319111" target="_blank"
+                ><img class="icons" src="./images/twitter.png" alt="Twitter icon"
+              /></a>
             </div>
             <div
               class="
