updated description content in meta data of index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="description"
-      content="Michael Chang's homepage to show off his portfolio"
+      content="Michael Chang's homepage so you can get to know his background and see his work"
     />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Michael Chang" />
