add this homepage to the portfolio page and edit the cards to be the same height

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="About Michael Chang" />
+    <meta name="description" content="A little bit about Michael Chang" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Michael Chang" />
 
@@ -217,4 +217,3 @@
     <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
-
