--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,10 @@
                 ><img class="icons" src="./images/github.png" alt="Github icon"
               /></a>
               <a href="https://twitter.com/Michael14319111" target="_blank"
-                ><img class="icons" src="./images/twitter.png" alt="Twitter icon"
+                ><img
+                  class="icons"
+                  src="./images/twitter.png"
+                  alt="Twitter icon"
               /></a>
             </div>
             <div
