--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
           </div>
           <!-- Cards of all my projects-->
           <div class="row card-container">
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
               <div class="card">
                 <a
                   href="https://github.com/michaelchang106/space_invader_tutorial"
@@ -128,7 +128,26 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+              <div class="card">
+                <a
+                  href="https://michaelchang106.github.io/michaelChangHomePage/index.html"
+                  target="_blank"
+                  ><img
+                    class="card-img-top"
+                    src="./images/mc_homepage_landing.png"
+                    alt="Screenshot of Michael Chang's homepage"
+                /></a>
+                <div class="card-body">
+                  <h5 class="card-title">Michael Chang's Homepage</h5>
+                  <p class="card-text">
+                    A homepage I made for my web dev class. Used mostly
+                    HTML/CSS, Bootstrap, and a little bit of Javascript
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
               <div class="card">
                 <a href="#"
                   ><img
@@ -142,7 +161,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
               <div class="card">
                 <a href="#"
                   ><img
@@ -156,7 +175,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
               <div class="card">
                 <a href="#"
                   ><img
@@ -170,21 +189,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="card">
-                <a href="#"
-                  ><img
-                    class="card-img-top"
-                    src="./images/more_soon.png"
-                    alt="Picture saying more to come soon"
-                /></a>
-                <div class="card-body">
-                  <h5 class="card-title">More to come soon!</h5>
-                  <p class="card-text">More to come soon!</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
               <div class="card">
                 <a href="#"
                   ><img
