--- a/experience.html
+++ b/experience.html
@@ -7,7 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Michael Chang Work Experience" />
+    <meta
+      name="description"
+      content="Michael Chang Education & Work Experience"
+    />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Michael Chang" />
 
