Updated README.md, removed some images not used & added screenshots of pages, updated portfolio page to have same card height in each row

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,14 @@
           </div>
           <!-- Cards of all my projects-->
           <div class="row card-container">
-            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
               <div class="card">
                 <a
                   href="https://github.com/michaelchang106/space_invader_tutorial"
@@ -128,7 +135,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
               <div class="card">
                 <a
                   href="https://michaelchang106.github.io/michaelChangHomePage/index.html"
@@ -147,7 +161,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
               <div class="card">
                 <a href="#"
                   ><img
@@ -161,7 +182,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
               <div class="card">
                 <a href="#"
                   ><img
@@ -175,7 +203,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
               <div class="card">
                 <a href="#"
                   ><img
@@ -189,7 +224,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex flex-row align-items-stretch">
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
               <div class="card">
                 <a href="#"
                   ><img
