--- a/portfolio.html
+++ b/portfolio.html
@@ -170,15 +170,15 @@
               "
             >
               <div class="card">
-                <a href="#"
+                <a href="https://github.com/michaelchang106/nbaDatabase"
                   ><img
                     class="card-img-top"
-                    src="./images/more_soon.png"
-                    alt="Picture saying more to come soon"
+                    src="./images/nbaDatabase.png"
+                    alt="Picture of my logical model chart for the NBA databse project"
                 /></a>
                 <div class="card-body">
-                  <h5 class="card-title">More to come soon!</h5>
-                  <p class="card-text">More to come soon!</p>
+                  <h5 class="card-title">NBA Database</h5>
+                  <p class="card-text">Created a simple database with SQLite3 + Express + Node.js to track NBA players and coaches on different teams with scheduled games. Tracked wins and loss records for the games and teams. Looking to possibly add player stats in the future.</p>
                 </div>
               </div>
             </div>
