changed portfolio background wrapper to be 100% height vs vh

--- a/portfolio.html
+++ b/portfolio.html
@@ -178,7 +178,13 @@
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">NBA Database</h5>
-                  <p class="card-text">Created a simple database with SQLite3 + Express + Node.js to track NBA players and coaches on different teams with scheduled games. Tracked wins and loss records for the games and teams. Looking to possibly add player stats in the future.</p>
+                  <p class="card-text">
+                    Created a simple database with SQLite3 + Express + Node.js
+                    to track NBA players and coaches on different teams with
+                    scheduled games. Tracked wins and loss records for the games
+                    and teams. Looking to possibly add player stats in the
+                    future.
+                  </p>
                 </div>
               </div>
             </div>
