updated for personal finance portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -197,15 +197,15 @@
               "
             >
               <div class="card">
-                <a href="#"
+                <a href="https://personal-finance-cs5610-webdev.herokuapp.com/"
                   ><img
                     class="card-img-top"
-                    src="./images/more_soon.png"
-                    alt="Picture saying more to come soon"
+                    src="https://github.com/michaelchang106/personalFinanceApp/blob/main/public/images/dollarSignIcon.png?raw=true"
+                    alt="Picture of a dollar sign"
                 /></a>
                 <div class="card-body">
-                  <h5 class="card-title">More to come soon!</h5>
-                  <p class="card-text">More to come soon!</p>
+                  <h5 class="card-title">Personal Finance App!</h5>
+                  <p class="card-text">Created a full-stack personal finance app to caclulate estimated tax liability, track record on actual and budgeted expense spend. Login authentication, sign up, and CRUD of the data. Used Mongo, Express, Node.js, Heroku to deploy. <a href="https://github.com/michaelchang106/personalFinanceApp">Personal Finance GitHub link</a></p>
                 </div>
               </div>
             </div>
