updated for personal finance portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,16 @@
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">Personal Finance App!</h5>
-                  <p class="card-text">Created a full-stack personal finance app to caclulate estimated tax liability, track record on actual and budgeted expense spend. Login authentication, sign up, and CRUD of the data. Used Mongo, Express, Node.js, Heroku to deploy. <a href="https://github.com/michaelchang106/personalFinanceApp">Personal Finance GitHub link</a></p>
+                  <p class="card-text">
+                    Created a full-stack personal finance app to caclulate
+                    estimated tax liability, track record on actual and budgeted
+                    expense spend. Login authentication, sign up, and CRUD of
+                    the data. Used Mongo, Express, Node.js, Heroku to deploy.
+                  </p>
+                  <a
+                    href="https://github.com/michaelchang106/personalFinanceApp"
+                    >Personal Finance GitHub link</a
+                  >
                 </div>
               </div>
             </div>
