added laundry app hamper dash

--- a/portfolio.html
+++ b/portfolio.html
@@ -227,15 +227,19 @@
               "
             >
               <div class="card">
-                <a href="#"
+                <a href="https://hamperdashp4.herokuapp.com/"
                   ><img
                     class="card-img-top"
-                    src="./images/more_soon.png"
-                    alt="Picture saying more to come soon"
+                    src="https://raw.githubusercontent.com/michaelchang106/laundryApp/main/front/public/laundryIconBlue.png"
+                    alt="Picture of my Laundry App Project's Icon, A Hamper"
                 /></a>
                 <div class="card-body">
-                  <h5 class="card-title">More to come soon!</h5>
-                  <p class="card-text">More to come soon!</p>
+                  <h5 class="card-title">Laundry App - Hamper Dash!</h5>
+                  <p class="card-text">App developed for my CS5610 Web Development Class at Northeastern University. It is a platform Web Application for requesting and providing laundry services. Developed the full stack app using Mongo, Express.js, React.js, Node.js.</p>
+                                    <a
+                    href="https://github.com/michaelchang106/laundryApp"
+                    >Laundry App - Hamper Dash -  GitHub link</a
+                  >
                 </div>
               </div>
             </div>
