updated for recycle AI project, updated work experience, removed twitter

--- a/portfolio.html
+++ b/portfolio.html
@@ -235,10 +235,14 @@
                 /></a>
                 <div class="card-body">
                   <h5 class="card-title">Laundry App - Hamper Dash!</h5>
-                  <p class="card-text">App developed for my CS5610 Web Development Class at Northeastern University. It is a platform Web Application for requesting and providing laundry services. Developed the full stack app using Mongo, Express.js, React.js, Node.js.</p>
-                                    <a
-                    href="https://github.com/michaelchang106/laundryApp"
-                    >Laundry App - Hamper Dash -  GitHub link</a
+                  <p class="card-text">
+                    App developed for my CS5610 Web Development Class at
+                    Northeastern University. It is a platform Web Application
+                    for requesting and providing laundry services. Developed the
+                    full stack app using Mongo, Express.js, React.js, Node.js.
+                  </p>
+                  <a href="https://github.com/michaelchang106/laundryApp"
+                    >Laundry App - Hamper Dash - GitHub link</a
                   >
                 </div>
               </div>
@@ -252,15 +256,23 @@
               "
             >
               <div class="card">
-                <a href="#"
+                <a href="https://github.com/michaelchang106/recycle-ai"
                   ><img
                     class="card-img-top"
-                    src="./images/more_soon.png"
-                    alt="Picture saying more to come soon"
+                    src="./images/recycle_ai.png"
+                    alt="Custom logo of the group AI Recycle project. EYE-RecAIcle"
                 /></a>
                 <div class="card-body">
-                  <h5 class="card-title">More to come soon!</h5>
-                  <p class="card-text">More to come soon!</p>
+                  <h5 class="card-title">Recycle-AI: EYE-RecAIcle</h5>
+                  <p class="card-text">
+                    Group project worked on for CS5500 Foundations of Software
+                    Engineering. Image Classification with Jetson Nano coupled
+                    with Output from Arduino. Uses the Nvidia Jetson Nano
+                    developer kit to train and test a ML model developed with
+                    PyTorch library on a Kaggle data set of various waste images
+                    to determine probablities of recycle type and waste
+                    categories.
+                  </p>
                 </div>
               </div>
             </div>
