added project for mobile development app class - smartShopper

--- a/portfolio.html
+++ b/portfolio.html
@@ -119,32 +119,6 @@
             >
               <div class="card">
                 <a
-                  href="https://github.com/michaelchang106/space_invader_tutorial"
-                  target="_blank"
-                  ><img
-                    class="card-img-top"
-                    src="./images/space_invaders.jpg"
-                    alt="Picture of TokyoEdtech's YouTube video tutorial of space invaders"
-                /></a>
-                <div class="card-body">
-                  <h5 class="card-title">Space Invaders on Python</h5>
-                  <p class="card-text">
-                    Followed a tutorial from TokyoEdtech's YouTube channel for
-                    creating a Spave Invaders game in Python
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div
-              class="
-                col-12 col-md-6 col-lg-4
-                d-flex
-                flex-row
-                align-items-stretch
-              "
-            >
-              <div class="card">
-                <a
                   href="https://michaelchang106.github.io/michaelChangHomePage/index.html"
                   target="_blank"
                   ><img
@@ -272,6 +246,34 @@
                     PyTorch library on a Kaggle data set of various waste images
                     to determine probablities of recycle type and waste
                     categories.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div
+              class="
+                col-12 col-md-6 col-lg-4
+                d-flex
+                flex-row
+                align-items-stretch
+              "
+            >
+              <div class="card">
+                <a
+                  href="https://github.com/djlisko01/cs5520-team2-smart-shopper"
+                  target="_blank"
+                  ><img
+                    class="card-img-top"
+                    src="./images/ic_launcher_bag-playstore.png"
+                    alt="Picture of SmartShopper app icon"
+                /></a>
+                <div class="card-body">
+                  <h5 class="card-title">Smartshopper</h5>
+                  <p class="card-text">
+                    Group projected worked on for CS5520 Mobile Application
+                    Development. Social shopping network to help users in the
+                    community to find the best deals on products. Android
+                    project developed with Java.
                   </p>
                 </div>
               </div>
