updated smartshopper description

--- a/portfolio.html
+++ b/portfolio.html
@@ -270,10 +270,13 @@
                 <div class="card-body">
                   <h5 class="card-title">Smartshopper</h5>
                   <p class="card-text">
-                    Group projected worked on for CS5520 Mobile Application
-                    Development. Social shopping network to help users in the
-                    community to find the best deals on products. Android
-                    project developed with Java.
+                    Group project worked on for CS5520 Mobile Application
+                    Development. SmartShopper is a social shopping network to
+                    help users in the community to find the best deals on
+                    products. Android project developed with Java. Worked on the
+                    home landing page recyclerView showing all the deals, and
+                    the overall architecture and design of the codebase
+                    (database service and platform methods).
                   </p>
                 </div>
               </div>
